<resources>
    <string name="app_name">Proyecto_Android_Tienda_Informatica</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="registrarme">REGISTRARME</string>
    <string name="nombre">Nombre:</string>
    <string name="email">Email:</string>
    <string name="direccion">Direccion:</string>
    <string name="contrase_a">Contraseña</string>
    <string name="todo">TODO</string>
    <string name="entrar">ENTRAR</string>
    <string name="precio">Precio:</string>
    <string name="marca">Marca:</string>
    <string name="tipo">Tipo:</string>
    <string name="caracteristicas">Caracteristicas:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sobre_shopinfo">sobre shopinfo</string>
    <string name="preguntas_frecuentes">preguntas frecuentes</string>
    <string name="que_es_shopinfo">que es shopinfo</string>
    <string name="tiempo_para_devolver_un_producto">tiempo para devolver un producto</string>
    <string name="los_productos_tienen_garantia">los productos tienen garantia</string>
    <string name="usar_shopinfo">usar shopinfo</string>
    <string name="metodos_de_pago">metodos de pago</string>
    <string name="tiempos_de_entrega_aproximados">tiempos de entrega aproximados</string>
    <string name="shopinfo_premium">shopinfo premium</string>
    <string name="que_es_shopinfo_premium">que es shopinfo premium</string>
    <string name="ventajas_de_esta_version">ventajas de version</string>
    <string name="suscripcion_y_precios">suscripcion y precios</string>
</resources>