<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    android:background="@drawable/gradient_list"
    android:id="@+id/mainLayout">

    <ImageView
        android:id="@+id/logoRegistro"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/txtNombreRegistro"
        android:layout_width="313dp"
        android:layout_height="70dp"
        android:layout_below="@id/logoRegistro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs_custom"
        android:drawableStart="@android:drawable/ic_menu_myplaces"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtEmailRegistro"
        android:layout_width="313dp"
        android:layout_height="70dp"
        android:layout_below="@id/txtNombreRegistro"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/inputs_custom"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtDireccionRegistro"
        android:layout_width="313dp"
        android:layout_height="70dp"
        android:layout_below="@+id/txtEmailRegistro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/inputs_custom"
        android:drawableStart="@android:drawable/ic_dialog_map"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/direccion"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtContrasenaRegistro"
        android:layout_width="313dp"
        android:layout_height="70dp"
        android:layout_below="@id/txtDireccionRegistro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/inputs_custom"
        android:drawableStart="@drawable/ic_contra"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtContrasenaRegistro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/boton_custom"
        android:elevation="50dp"
        android:shadowDx="4"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/registrarme"
        android:textSize="20sp" />
</RelativeLayout>