<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/gradient_list"
    android:id="@+id/mainLayout">

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="215dp"
        android:layout_height="232dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/txtEmailLogin"
        android:layout_width="313dp"
        android:layout_height="70dp"
        android:layout_below="@id/logoLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/inputs_custom"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtContrasenaLogin"
        android:layout_width="313dp"
        android:layout_height="70dp"
        android:layout_below="@id/txtEmailLogin"
        android:layout_centerHorizontal="true"
        android:background="@drawable/inputs_custom"
        android:drawableStart="@drawable/ic_contra"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtContrasenaLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/boton_custom"
        android:elevation="50dp"
        android:shadowDx="4"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/entrar"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnEntrar"
        android:layout_centerHorizontal="true"
        android:background="@drawable/boton_custom"
        android:elevation="50dp"
        android:shadowDx="4"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/registrarme"
        android:textSize="20sp" />
</RelativeLayout>